# zotero-ls

./: .envrc.recommended  Makefile  README.md  pyproject.toml
src/zotero_ls/: __init__.py  __main__.py  bbt.py  cli.py  json_rpc.py
src/zotero_ls/bbt/: __init__.py  db.py  rpc.py
src/zotero_ls/filetypes/: __init__.py  tex.py
