[project]
name = "zotero-ls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Anand Balakrishnan", email = "anandbala1597@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.12.14",
  "aiosqlite>=0.21.0",
  "click>=8.2.1",
  "lsprotocol>=2025.0.0",
  "pydantic>=2.11.7",
  "pygls>=2.0.0a6",
  "rich>=14.0.0",
  "sqlalchemy[asyncio]>=2.0.41",
  "typing-extensions>=4.14.1",
  "urllib3>=2.5.0",
  "xdg-base-dirs>=6.0.2",
]


[dependency-groups]
dev = ["ipdb", "ipython", "mypy", "ruff", "ty"]

[project.scripts]
zotero_ls = "zotero_ls.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.mypy]
# ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
line-length = 127

[tool.ruff.lint]
extend-select = ["E", "F", "W", "N", "B", "ANN", "PYI", "I"]
extend-ignore = ["F722"]

[tool.ruff.lint.extend-per-file-ignores]
"*.py" = ["B905", "E203", "E501", "W291", "W293"]
"*.pyi" = ["B", "E501", "E701"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
pythonPlatform = "All"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
